# narrative-generation

./: README.md  app.py  examples.md  grammar_fix.py  main.py  modal.html  pyproject.toml
.zed/: tasks.json
examples/example-1/: Questionnaire.json  completed-QuestionnaireResponse.json  completed-output.txt  empty-QuestionnaireResponse.json  template.yaml
examples/example-2/: Questionnaire.json  lek-QuestionnaireResponse.json  lek-output.txt  template.yaml
narrative_generation/: __init__.py
tests/: test_narrative_generation.py
